# cod-odisha

./: .env.example  .gitignore  README.md  dev_setup.ps1  dev_start.ps1  identity_fix.txt  pyproject.toml
backend/: .dockerignore  Dockerfile  __init__.py  requirements.txt
backend/app/: __init__.py  main.py  modules.py
backend/app/models/: __init__.py
backend/app/modules/: __init__.py
backend/datasets/: __init__.py
cloud_training/: README.md
cloud_training/kaggle_kernel/: kaggle_train.py  kernel-metadata.json
docs/: COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  DATASET_ACQUISITION_GUIDE.md  DATASET_DOWNLOAD_GUIDE.md  FINAL_DATASET_GUIDE.md  INDEX.md  KAGGLE_SETUP.md  PRE_TRAINING_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_DATASET_SETUP.md  QUICK_REFERENCE.md  SETUP.md  TRAINING_STATUS.md
frontend/: index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: BilingualOutput.jsx  ImageUploader.jsx  Logo.jsx  (+2 more)
model_training/: __init__.py  evaluate.py  export_onnx.py  requirements.txt  train.py
model_training/configs/: resnet50_config.yaml
model_training/datasets/: __init__.py  augmentation.py  odisha_cod_dataset.py
scripts/: START_TRAINING.py  complete_pipeline_test.py  create_dummy_dataset.py  dataset_status.py  download_alternative.py  download_cod10k.py  download_from_kaggle.py  download_github_direct.py  download_options.py  organize_cod10k.py  quick_train.py  search_kaggle_cod.py  setup_data.py  setup_dataset.py  setup_kaggle.py  validate_setup.py
(+2 files in other folders)
