# Project Configuration
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-odisha"
version = "1.0.0"
description = "Camouflaged Object Detection system for Odisha biodiversity"
authors = [
    {name = "COD-Odisha Team"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["backend", "model_training"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
